fixed card color

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -27,10 +27,20 @@ a,
     place-items: center;
   }
 
-  #app {
-    /* display: grid;
+  /* #app {
+    display: grid;
     grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1rf 1rf; */
     padding: 0 2rem;
-  }
+  } */
 }
+@media (min-width: 576px) { 
+  body {
+    display: flex;
+    padding: 2px;
+  }
+  #app {
+    display: grid;
+    flex-wrap: wrap;
+    flex-direction: column;
+  }
+ }
